--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Shadows Into Light', cursive;
+    font-family:'Roboto Mono', monospace;
     font-size: 20px;
     color: grey;
 }
@@ -12,7 +12,6 @@ html{
 
 body {
     background: grey;
-
 }
 
 .nav {
@@ -69,8 +68,8 @@ ul{
 
 .weekss{
     Padding: 0em 0em 0em 29em;
-
 }
+
 .week1 {
     margin-top: 10%;
     padding: 30%;
@@ -110,7 +109,7 @@ ul{
 
 .rights {
     color: #fc6c85;
-    margin-left: 24em;
+    margin-left: 21em;
 }
 
 footer{
@@ -126,6 +125,5 @@ button {
     margin-left: 27.5em;
     border-radius: 7.5px;
     text-align: center;
-
 }
 
